--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Music Player</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/a23218a942.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/ie.js"></script>
-    <script defer src="js/main.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <script defer src="ie.js"></script>
+    <script defer src="main.js"></script>
 </head>
 <body>
     <figure>
@@ -40,7 +40,7 @@
                                 <i class="fas fa-redo-alt"></i>
                             </li>
                         </ul>
-                        <audio src="music/Blizzards.mp3"></audio>
+                        <audio src="Blizzards.mp3"></audio>
                     </div>
                 </div>
             </article>
@@ -63,7 +63,7 @@
                                 <i class="fas fa-redo-alt"></i>
                             </li>
                         </ul>
-                        <audio src="music/Calm.mp3"></audio>
+                        <audio src="Calm.mp3"></audio>
                 </div>
             </article>
             <article>
@@ -85,7 +85,7 @@
                                 <i class="fas fa-redo-alt"></i>
                             </li>
                         </ul>
-                        <audio src="music/Dusty_Road.mp3"></audio>
+                        <audio src="Dusty_Road.mp3"></audio>
                 </div>
             </article>
             <article>
@@ -107,7 +107,7 @@
                                 <i class="fas fa-redo-alt"></i>
                             </li>
                         </ul>
-                        <audio src="music/Escape.mp3"></audio>
+                        <audio src="Escape.mp3"></audio>
                 </div>
             </article>
             <article>
@@ -129,7 +129,7 @@
                                 <i class="fas fa-redo-alt"></i>
                             </li>
                         </ul>
-                        <audio src="music/Payday.mp3"></audio>
+                        <audio src="Payday.mp3"></audio>
                 </div>
             </article>
             <article>
@@ -151,7 +151,7 @@
                                 <i class="fas fa-redo-alt"></i>
                             </li>
                         </ul>
-                        <audio src="music/Retreat.mp3"></audio>
+                        <audio src="Retreat.mp3"></audio>
                 </div>
             </article>
             <article>
@@ -173,7 +173,7 @@
                                 <i class="fas fa-redo-alt"></i>
                             </li>
                         </ul>
-                        <audio src="music/Seasonal.mp3"></audio>
+                        <audio src="Seasonal.mp3"></audio>
                 </div>
             </article>
             <article>
@@ -195,7 +195,7 @@
                                 <i class="fas fa-redo-alt"></i>
                             </li>
                         </ul>
-                        <audio src="music/Vespers.mp3"></audio>
+                        <audio src="Vespers.mp3"></audio>
                 </div>
             </article>
         </section>
